기능::회원가입 요청 구현(Frontend)

--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -39,22 +39,22 @@
             <div class="sign-up-htm">
                 <div class="group">
                     <label for="user" class="label">Username</label>
-                    <input id="user" type="text" class="input">
+                    <input id="signupId" type="text" class="input" placeholder="아이디">
                 </div>
                 <div class="group">
                     <label for="pass" class="label">Password</label>
-                    <input id="pass" type="password" class="input" data-type="password">
+                    <input id="signupPsword" type="password" class="input" data-type="password" placeholder="비밀번호">
                 </div>
                 <div class="group">
                     <label for="pass" class="label">Repeat Password</label>
-                    <input id="pass" type="password" class="input" data-type="password">
+                    <input id="confirm-psword" type="password" class="input" data-type="password" placeholder="비밀번호 확인">
                 </div>
                 <div class="group">
                     <label for="pass" class="label">Email Address</label>
-                    <input id="pass" type="text" class="input">
+                    <input id="email" type="text" class="input" placeholder="이메일">
                 </div>
                 <div class="group">
-                    <input type="submit" class="button" value="Sign Up">
+                    <input id="signup" type="submit" class="button" value="Sign Up">
                 </div>
                 <div class="hr"></div>
                 <div class="foot-lnk">
