--- a/app/src/views/home/finder.ejs
+++ b/app/src/views/home/finder.ejs
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/home/login.css">
-    <script src="/js/home/login.js" defer></script>
+    <script src="/js/home/finder.js" defer></script>
     <title>Document</title>
 </head>
 <body>
