--- a/app/src/views/home/finder.ejs
+++ b/app/src/views/home/finder.ejs
@@ -17,18 +17,18 @@
             <div class="">
                 <div class="group">
                     <label for="user" class="label">Id</label>
-                    <input id="user" type="text" class="input" placeholder="아이디">
+                    <input id="id" type="text" class="input" placeholder="아이디">
                 </div>
                 <div class="group">
                     <label for="pass" class="label">Email</label>
-                    <input id="pass" type="password" class="input" data-type="password" placeholder="이메일">
+                    <input id="email" type="email" class="input" placeholder="이메일">
                 </div>
                 <div class="group">
                     <input id="check" type="checkbox" class="check" checked>
                     <label for="check"><span class="icon"></span> Keep me Signed in</label>
                 </div>
                 <div class="group">
-                    <input type="submit" class="button" value="Find password">
+                    <input id="finder" type="submit" class="button" value="Find password">
                 </div>
                 <div class="hr"></div>
                 <div class="foot-lnk">
